fix: increase padding for blog header title for improved spacing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -131,7 +131,7 @@
     font-family: Inter;
     font-weight: 600;
     border-bottom: 1px solid #d7d7d7;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
 }
 
 .dark .blog-header-title {
